--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,17 +1,17 @@
-<article>
+<article class="article-preview">
     <div class="wrapper prev">
         <div class="preview">
             <div class="preview-left">
                 <span class="sup-title">Changing your catering way</span>
-                <h1>Perfect Foods <span class="primary-text">Better Live</span></h1>
+                <h1>Perfect Foods <br> <span class="primary-text">Better Live</span></h1>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do. rong para duija naago conporat der
                     Andomo lakoc amet aven.
                 </p>
                 <button class="primary-large">Subscribe</button>
-                <div class="preview-right">
-                    <img src="../../../assets/images/preview.png" alt="...">
-                </div>
+            </div>
+            <div class="preview-right">
+                <!--<img src="../../../assets/images/preview.png" alt="...">-->
             </div>
         </div>
     </div>
@@ -29,14 +29,14 @@
             <div class="commitment-footer">
                 <div class="card">
                     <div class="card-ico">
-                        <img src="../../../assets/images/star.svg" alt="...">
+                        <!--<img src="../../../assets/images/star.svg" alt="...">-->
                     </div>
                     <h3>Top Rated</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit form du lahoke.</p>
                 </div>
                 <div class="card">
                     <div class="card-ico">
-                        <img src="../../../assets/images/orange.svg" alt="...">
+                        <!--<img src="../../../assets/images/orange.svg" alt="...">-->
                     </div>
                     <h3>Fresh Food</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit form du lahoke.</p>
