--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -20,7 +20,7 @@
             </div>
             <div class="card">
                 <div class="card-ico">
-                    <img src="../../../assets/images/star.svg" alt="...">
+                    <!--<img src="../../../assets/images/star.svg" alt="...">-->
                 </div>
                 <h3>Top Rated</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit form du lahoke.</p>
