--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -3,10 +3,10 @@
         <div class="footer-inner">
             <article>
                 <div class="social-icons">
-                    <a href="#!"><img src="../../../assets/images/twitter.svg" alt=""></a>
-                    <a href="#!"><img src="../../../assets/images/facebook.svg" alt=""></a>
-                    <a href="#!"><img src="../../../assets/images/google.svg" alt=""></a>
-                    <a href="#!"><img src="../../../assets/images/inst.svg" alt=""></a>
+                    <a href="#!" class="footer-link"></a>
+                    <a href="#!" class="footer-link"></a>
+                    <a href="#!" class="footer-link"></a>
+                    <a href="#!" class="footer-link"></a>
                 </div>
                 <p class="copyright">© 2020 Foodology. All rights reserved</p>
             </article>
