--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -11,7 +11,6 @@
                 <button class="primary-large">Subscribe</button>
             </div>
             <div class="preview-right">
-                <!--<img src="../../../assets/images/preview.png" alt="...">-->
             </div>
         </div>
     </div>
@@ -35,9 +34,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit form du lahoke.</p>
                 </div>
                 <div class="card">
-                    <div class="card-ico">
-                        <!--<img src="../../../assets/images/orange.svg" alt="...">-->
-                    </div>
+                    <div class="card-ico"></div>
                     <h3>Fresh Food</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit form du lahoke.</p>
                 </div>
@@ -96,4 +93,8 @@
         </div>
     </div>
 </article>
+<!--<app-feedback></app-feedback>-->
+<div class="menus">
+    <app-menustoday></app-menustoday>
+</div>
 <app-subscribe></app-subscribe>
