--- a/src/app/layouts/footer/footer.component.scss
+++ b/src/app/layouts/footer/footer.component.scss
@@ -1,21 +1,21 @@
-@import '../../shared/styles/reset';
-@import '../../shared/styles/base';
+@import "../../shared/styles/reset";
+@import "../../shared/styles/base";
 
-footer{
+footer {
     padding: 0 0 80px 0;
 }
 
-.footer-inner{
+.footer-inner {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
 }
 
-.footer-right{
+.footer-right {
     display: flex;
 }
 
-.items{
+.items {
     width: 170px;
     height: 213px;
     display: flex;
@@ -24,44 +24,64 @@ footer{
     align-items: center;
 }
 
-.items-inner{
+.items-inner {
     display: flex;
     flex-direction: column;
 }
 
-.item{
-    transition: all .2s;
-    &:hover{
+.item {
+    transition: all 0.2s;
+    &:hover {
         color: $primary;
     }
 }
 
-.social-icons a{
+.social-icons a {
     margin-right: 30px;
 }
-.social-icons{
+.social-icons {
     margin-bottom: 55px;
+    display: flex;
+    .footer-link {
+        display: block;
+        width: 20px;
+        height: 20px;
+        background-position: center;
+        background-repeat: no-repeat;
+        &:nth-child(1){
+            background-image: url('../../../assets/images/twitter.svg');
+        }
+        &:nth-child(2){
+            background-image: url('../../../assets/images/facebook.svg');
+        }
+        &:nth-child(3){
+            background-image: url('../../../assets/images/google.svg');
+        }
+        &:nth-child(4){
+            background-image: url('../../../assets/images/inst.svg');
+        }
+    }
 }
 
-.copyright, .item{
+.copyright,
+.item {
     font-size: 12px;
     line-height: 180%;
-    color: #59423C;
+    color: #59423c;
 }
 
-
 @media screen and (max-width: 414px) {
-    footer{
+    footer {
         padding: 0;
     }
-    .footer-inner{
+    .footer-inner {
         padding: 100px 30px 35px;
         flex-wrap: wrap;
     }
-    .footer-right{
+    .footer-right {
         margin-top: 50px;
     }
-    .items{
+    .items {
         width: 145px;
         align-items: flex-start;
     }
