--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -10,7 +10,7 @@
         background-color: $primary;
         position: absolute;
         top: 77px;
-        left: 90%;
+        left: 75%;
         right: 0px;
     }
 }
@@ -73,14 +73,14 @@
     display: flex;
     justify-content: space-between;
     margin-top: 50px;
-    .card:first-child{
-        .card-ico{
-            background: url('../../../assets/images/star.svg') center/30px no-repeat $primary;
+    .card:first-child {
+        .card-ico {
+            background: url("../../../assets/images/star.svg") center/30px no-repeat $primary;
         }
     }
-    .card:nth-child(2){
-        .card-ico{
-            background: url('../../../assets/images/orange.svg') center/41px no-repeat $primary;
+    .card:nth-child(2) {
+        .card-ico {
+            background: url("../../../assets/images/orange.svg") center/41px no-repeat $primary;
         }
     }
 }
@@ -146,6 +146,12 @@
     border-radius: 20px;
 }
 
+.menus {
+    padding: 100px 0px 170px;
+    background-color: #fff3ef;
+    margin-bottom: 150px;
+}
+
 @media screen and (max-width: 414px) {
     .article-preview {
         &::before {
@@ -199,6 +205,7 @@
     }
     .commitment-footer {
         flex-wrap: wrap;
+        justify-content: center;
         .card {
             margin-bottom: 50px;
         }
@@ -226,6 +233,16 @@
             margin-bottom: 65px;
         }
         .list-item {
+            h4 {
+                margin-top: 8px;
+                font-size: 23px;
+            }
+            p {
+                margin: 10px 0px 20px;
+            }
+            .primary-text {
+                font-size: 23px;
+            }
             border-bottom: 1px solid #dfe1e6;
             margin-bottom: 30px;
         }
@@ -240,5 +257,9 @@
             width: 100%;
             height: 65vh;
         }
+    }
+    .menus {
+        padding: 40px 0px 100px;
+        margin-bottom: 0px;
     }
 }
