--- a/src/app/pages/foods/foods.component.html
+++ b/src/app/pages/foods/foods.component.html
@@ -1,1 +1,98 @@
+<article>
+    <div class="wrapper">
+        <div class="menu">
+            <div class="menu-title">
+                <h2>Today’s featured</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.
+                </p>
+            </div>
+            <div class="menu-bottom">
+                <div class="menu-sidebar">
+                    <div class="sidebar-btns">
+                        <button class="sidebar-btn active-btn">Main Course</button>
+                        <button class="sidebar-btn">Dizzerts</button>
+                        <button class="sidebar-btn">Appetizers</button>
+                    </div>
+                    <div class="sidebar-footer">
+                        <span>Qt.</span>
+                        <div class="counter">
+                            <button class="minus"></button>
+                            <span>12</span>
+                            <button class="plus"></button>
+                        </div>
+                    </div>
+                    <div class="sidebar-right">
+                        <div class="choose">
+                            <select class="control-select">
+                                <option disabled selected>Meat Dishes</option>
+                                <option>option 1</option>
+                                <option>option 2</option>
+                                <option>option 3</option>
+                            </select>
+                        </div>
+                        <div class="menu-list">
+                            <div class="list-item active-item">
+                                <div class="item-img"></div>
+                                <div class="item-title">Chicken Parmesan</div>
+                            </div>
+                            <div class="list-item">
+                                <div class="item-img"></div>
+                                <div class="item-title">Chicken Parmesan</div>
+                            </div>
+                            <div class="list-item">
+                                <div class="item-img"></div>
+                                <div class="item-title">Chicken Parmesan</div>
+                            </div>
+                            <div class="list-item">
+                                <div class="item-img"></div>
+                                <div class="item-title">Chicken Parmesan</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu-content">
+                    <div class="product">
+                        <div class="product-photos">
+                            <div class="product-main-photo"></div>
+                            <div class="footer-photos">
+                                <div class="footer-photo"></div>
+                                <div class="footer-photo"></div>
+                            </div>
+                        </div>
+                        <div class="product-desc">
+                            <h4>Chicken Parmesan</h4>
+                            <span class="primary-text">Calories : 70gr - Chicken</span>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                incididunt ut labore et .
+                            </p>
+                            <div class="product-footer-btns">
+                                <button class="outline-primary-medium">See More</button>
+                                <button class="primary-medium">Add</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</article>
+
+<div class="menus">
+    <app-menustoday></app-menustoday>
+</div>
 <app-subscribe></app-subscribe>
+
+
+
+
+
+
+
+<!--<select class="control-select">
+    <option>Choose an option</option>
+    <option>option 1</option>
+    <option>option 2</option>
+    <option>option 3</option>
+</select>-->
