--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -4,6 +4,7 @@
             <div class="header-left">
                 <button (click)="toggleBurger()" class="open-burger"></button>
                 <div *ngIf="isVisibleburger" class="burger-menu">
+                    <button (click)="toggleBurger()" class="close-btn"></button>
                     <a (click)="toggleBurger()" [routerLink]="[ '/about' ]" routerLinkActive="active" class="link">About</a>
                     <a (click)="toggleBurger()" [routerLink]="[ '/foods' ]" routerLinkActive="active" class="link">Foods</a>
                     <a (click)="toggleBurger()" [routerLink]="[ '/pricing' ]" routerLinkActive="active" class="link">Pricing</a>
