--- a/src/app/pages/pricing/pricing.component.html
+++ b/src/app/pages/pricing/pricing.component.html
@@ -1,1 +1,143 @@
-<p>pricing works!</p>
+<article>
+    <div class="wrapper">
+        <div class="bundle">
+            <div class="bundle-title">
+                <span class="sup-title">bundle</span>
+                <h2>Suitable Bundles For You</h2>
+                <p>Select your suitable catering bundles easy</p>
+            </div>
+            <div class="bundle-cards">
+                <div class="foods-card">
+                    <div class="foods-card-head">
+                        <div class="head-photo"></div>
+                        <div class="head-text">
+                            <h5>Breakfast</h5>
+                            <h2>$15 <p>/ pcs</p></h2>
+                        </div>
+                    </div>
+                    <div class="foods-card-content">
+                        <ul>
+                            <li><p>Lorem Ipsum Dolor Sit Amet</p></li>
+                            <li><p>Ipmo Doj Samat</p></li>
+                            <li><p>Sed do eiusmod tempor</p></li>
+                        </ul>
+                    </div>
+                    <button class="primary-large">Add</button>
+                </div>
+                <div class="foods-card">
+                    <div class="foods-card-head">
+                        <div class="head-photo"></div>
+                        <div class="head-text">
+                            <h5>Lunch</h5>
+                            <h2>$15 <p>/ pcs</p></h2>
+                        </div>
+                    </div>
+                    <div class="foods-card-content">
+                        <ul>
+                            <li><p>Lorem Ipsum Dolor Sit Amet</p></li>
+                            <li><p>Ipmo Doj Samat</p></li>
+                            <li><p>Sed do eiusmod tempor</p></li>
+                        </ul>
+                    </div>
+                    <button class="primary-large">Add</button>
+                </div>
+                <div class="foods-card">
+                    <div class="foods-card-head">
+                        <div class="head-photo"></div>
+                        <div class="head-text">
+                            <h5>Dinner</h5>
+                            <h2>$15 <p>/ pcs</p></h2>
+                        </div>
+                    </div>
+                    <div class="foods-card-content">
+                        <ul>
+                            <li><p>Lorem Ipsum Dolor Sit Amet</p></li>
+                            <li><p>Ipmo Doj Samat</p></li>
+                            <li><p>Sed do eiusmod tempor</p></li>
+                        </ul>
+                    </div>
+                    <button class="primary-large">Add</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</article>
+<article class="question">
+    <div class="wrapper">
+        <div class="question-inner">
+            <div class="question-title">
+                <span class="faq">FAQ</span>
+                <h2>Got Question?</h2>
+                <p>Perfect, We’ve got the answers!</p>
+            </div>
+            <div class="questions">
+                <div class="question-item">
+                    <div class="question-item-top">
+                        <p>Lorem Ipsum Dolor Sit Amet Sed?</p>
+                        <button class="question-btn" (click)="toggleQuestion(1)"></button>
+                    </div>
+                    <div class="line"></div>
+                    <p class="question-item-bottom">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
+                    </p>
+                </div>
+                <div class="question-item">
+                    <div class="question-item-top">
+                        <p>Lorem Ipsum Dolor Sit Amet Sed?</p>
+                        <button class="question-btn" (click)="toggleQuestion(2)"></button>
+                    </div>
+                    <div class="line"></div>
+                    <p class="question-item-bottom">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
+                    </p>
+                </div>
+                <div class="question-item">
+                    <div class="question-item-top">
+                        <p>Lorem Ipsum Dolor Sit Amet Sed?</p>
+                        <button class="question-btn" (click)="toggleQuestion(3)"></button>
+                    </div>
+                    <div class="line"></div>
+                    <p class="question-item-bottom">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
+                    </p>
+                </div>
+                <div class="question-item">
+                    <div class="question-item-top">
+                        <p>Lorem Ipsum Dolor Sit Amet Sed?</p>
+                        <button class="question-btn" (click)="toggleQuestion(4)"></button>
+                    </div>
+                    <div class="line"></div>
+                    <p class="question-item-bottom">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
+                    </p>
+                </div>
+                <div class="question-item">
+                    <div class="question-item-top">
+                        <p>Lorem Ipsum Dolor Sit Amet Sed?</p>
+                        <button class="question-btn" (click)="toggleQuestion(5)"></button>
+                    </div>
+                    <div class="line"></div>
+                    <p class="question-item-bottom">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
+                    </p>
+                </div>
+                <div class="question-item">
+                    <div class="question-item-top">
+                        <p>Lorem Ipsum Dolor Sit Amet Sed?</p>
+                        <button class="question-btn" (click)="toggleQuestion(6)"></button>
+                    </div>
+                    <div class="line"></div>
+                    <p class="question-item-bottom">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</article>
