--- a/src/app/layouts/feedback/feedback.component.html
+++ b/src/app/layouts/feedback/feedback.component.html
@@ -1,5 +1,23 @@
 <article>
     <div class="wrapper">
-        
+        <div class="feedback">
+            <div class="feedback-left">
+                <div class="user-photo"></div>
+                <div class="user-name">
+                    <h4 class="primary-text">Mason Jonas</h4>
+                    <p class="user-position">Human Resource Development</p>
+                </div>
+            </div>
+            <div class="feedback-right">
+                <div class="sup-title">testimonails</div>
+                <h2>What they say?</h2>
+                <h1 class="primary-text">“</h1>
+                <h4 class="primary-text">Complete Selection</h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam.
+                </p>
+            </div>
+        </div>
     </div>
 </article>
