--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -93,7 +93,7 @@
         </div>
     </div>
 </article>
-<!--<app-feedback></app-feedback>-->
+<app-feedback></app-feedback>
 <div class="menus">
     <app-menustoday></app-menustoday>
 </div>
