--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,1 +1,16 @@
-<p>admin works!</p>
+<div class="container-fluid mb-3 mt-3">
+    <div class="row">
+        <div class="col">
+            <div class="d-flex align-items-start">
+                <div class="btn-group-vertical" role="group" aria-label="Basic example">
+                    <a [routerLink]="[ 'category' ]" routerLinkActive="active" class="btn btn-primary">Category</a>
+                    <a [routerLink]="[ 'product' ]" routerLinkActive="active" class="btn btn-primary">Product</a>
+                    <a [routerLink]="[ 'orders' ]" routerLinkActive="active" class="btn btn-primary">Orders</a>
+                </div>
+                <div class="tab-content col" id="v-pills-tabContent">
+                    <router-outlet></router-outlet>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
