--- a/src/app/pages/pricing/pricing.component.html
+++ b/src/app/pages/pricing/pricing.component.html
@@ -62,6 +62,36 @@
         </div>
     </div>
 </article>
+<article>
+    <div class="wrapper">
+        <div class="commitment">
+            <div class="commitment-header">
+                <span class="sup-title">COMMITMENT</span>
+                <h2>Why we are good for you</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit form du lahoke.
+                </p>
+            </div>
+            <div class="commitment-footer">
+                <div class="card-long">
+                    <div class="card-ico"></div>
+                    <h3>Top Rated</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam.</p>
+                </div>
+                <div class="delivery">
+                    <h3>Express Delivery</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit form du lahoke.
+                    </p>
+                    <span class="primary-text">37 <span>min</span></span>
+                    <p>Average delivery times.</p>
+                    <button class="outline-primary-large">See More</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</article>
 <article class="question">
     <div class="wrapper">
         <div class="question-inner">
