--- a/src/app/pages/pricing/pricing.component.scss
+++ b/src/app/pages/pricing/pricing.component.scss
@@ -23,8 +23,13 @@
     background: #26120c;
 }
 
-.feedback{
+.feedback-wrapper{
     margin-top: -350px;
+    ::ng-deep{
+        .feedback{
+            color: red !important;
+        }
+    }
 }
 
 .question-title {
