--- a/src/app/pages/pricing/pricing.component.html
+++ b/src/app/pages/pricing/pricing.component.html
@@ -171,4 +171,4 @@
         </div>
     </div>
 </article>
-<div class="feedback"><app-feedback></app-feedback></div>
+<div class="feedback-wrapper"><app-feedback></app-feedback></div>
