--- a/src/app/admin/admin-category/admin-category.component.scss
+++ b/src/app/admin/admin-category/admin-category.component.scss
@@ -1,7 +1,7 @@
 @import "~bootstrap/dist/css/bootstrap.css";
 @import '../../shared/styles/variables';
 
-body{
+*{
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 
