--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -6,6 +6,7 @@
                     <a [routerLink]="[ 'category' ]" routerLinkActive="active" class="btn btn-primary">Category</a>
                     <a [routerLink]="[ 'product' ]" routerLinkActive="active" class="btn btn-primary">Product</a>
                     <a [routerLink]="[ 'orders' ]" routerLinkActive="active" class="btn btn-primary">Orders</a>
+                    <a [routerLink]="[ 'bundle' ]" routerLinkActive="active" class="btn btn-primary">Bundle</a>
                 </div>
                 <div class="tab-content col" id="v-pills-tabContent">
                     <router-outlet></router-outlet>
