--- a/src/app/layouts/header/header.component.scss
+++ b/src/app/layouts/header/header.component.scss
@@ -28,7 +28,7 @@ header{
     justify-content: center;
     align-items: center;
     background: linear-gradient(180deg, rgba(255, 255, 255, 0.952) 22%, rgba(255, 202, 187, 0.979) 100%);
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     bottom: 0;
