--- a/src/app/shared/styles/_base.scss
+++ b/src/app/shared/styles/_base.scss
@@ -410,6 +410,9 @@ p {
         margin-right: 20px;
         border-radius: 20px;
         background-color: $primary;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
     }
     li{
         padding-left: 25px;
